--- a/style/config.css
+++ b/style/config.css
@@ -1,10 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     display: grid;
     place-items: center;
     height: 100vh;
@@ -16,4 +16,6 @@ body{
     border-radius: 15px;
     background-color: aliceblue;
     box-shadow: 2px 2px 4px black;
+    width: 800px;
+    height: 900px;
 }
