--- a/style/config.css
+++ b/style/config.css
@@ -1,7 +1,6 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
 }
 
 body {
@@ -24,14 +23,17 @@ body {
     position: absolute;
     z-index: 2;
     top: 90vh;
-    left: calc(50vw - 50px);
+    left: calc(50vw - 35px);
     border-radius: 50%;
+    padding: 4px;
     aspect-ratio: 1;
-    height: 40px;
+    height: 45px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     background-color: #6b2e1f;
     color: white;
     font-size: 35px;
+    box-shadow: 2px 2px 10px rgb(0, 0, 0);
+    cursor: pointer;
 }
 
 #div-size-canvas {
